# apc

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  flake.nix  treefmt.toml
.github/workflows/: ci.yml
.helix/: languages.toml
include/: gradient_cpu.h  helpers.h  shaders.h
src/: fragment_shader.glsl  helpers.cpp  main.cpp  shader.frag  shader.vert  vertex_shader.glsl
